<resources>
    <string name="app_name">美途客</string>
    <string name="input_six_code_open">输入六位开箱码</string>
    <string name="customer_service_telephone">客 服 电 话 :  4 0 0 - 8 8 9 - 9 3 9 2</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="delete">删除</string>
    <string name="ok">确定</string>
    <string name="six_code_not_enough">输入的位数不足</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="next">下一步</string>
    <string name="retry">重试</string>

    <string name="device_fault">设备柜门故障（卡住，设备无法使用）</string>
    <string name="input_six_code_bind_device">请输入6位设备码进行绑定</string>
    <string name="bind_device">设备绑定</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="contact_back_office_handle">请联系后台人员处理</string>
    <string name="back_server_password_invalid_retry">密码错误,请重新输入</string>
    <string name="back_server_box_state_invalid">设备柜门状态有误</string>
    <string name="back_server_box_num_error">返回柜门编号有误</string>
    <string name="checking">检测中… …</string>
    <string name="network">网络</string>
    <string name="back_server">后台服务</string>

</resources>
