<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="click"
                type="android.view.View.OnClickListener"/>
        <variable name="hint" type="java.lang.String"/>
        <variable name="button" type="java.lang.String"/>
        <variable name="cancel" type="java.lang.String"/>
    </data>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center">

        <LinearLayout android:layout_width="@dimen/dp_216"
                      android:layout_height="@dimen/dp_40"
                      android:weightSum="6"
                      android:background="@drawable/bg_corner_circle_4">
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_1_tv"/>
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_2_tv"/>
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_3_tv"/>
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_4_tv"/>
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_5_tv"/>
            <TextView
                    style="@style/style_six_input_number"
                    android:id="@+id/wel_six_code_6_tv"/>

        </LinearLayout>

        <TextView android:id="@+id/wel_hint_tv" android:layout_width="@dimen/dp_256"
                  android:layout_height="@dimen/dp_40"
                  android:gravity="center"
                  android:text="@{hint}"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/dp_40"
                      android:orientation="horizontal">
            <Button android:id="@+id/wel_confirm_btn"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center"
                    android:onClick="@{click}"
                    android:text="@{button}"/>

            <Button android:id="@+id/wel_cancel_btn"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center"
                    android:onClick="@{click}"
                    android:text="@{cancel}"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/wel_keyboard_ll"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_256"
                android:background="@drawable/bg_corner_circle_8"
                android:padding="@dimen/dp_10">
            <LinearLayout
                    style="@style/style_layout_number_linear">
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_1"
                        android:id="@+id/main_code_1_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_2"
                        android:id="@+id/main_code_2_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_3"
                        android:id="@+id/main_code_3_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
            </LinearLayout>
            <LinearLayout
                    style="@style/style_layout_number_linear">
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_4"
                        android:id="@+id/main_code_4_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_5"
                        android:id="@+id/main_code_5_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_6"
                        android:id="@+id/main_code_6_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
            </LinearLayout>
            <LinearLayout
                    style="@style/style_layout_number_linear">
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_7"
                        android:id="@+id/main_code_7_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_8"
                        android:id="@+id/main_code_8_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_9"
                        android:id="@+id/main_code_9_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
            </LinearLayout>
            <LinearLayout
                    style="@style/style_layout_number_linear">
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/delete"
                        android:id="@+id/main_code_delete_tv"
                        android:background="@drawable/bg_circle_red"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/number_0"
                        android:id="@+id/main_code_0_tv"
                        android:background="@drawable/bg_circle"
                        android:onClick="@{click}"/>
                <TextView
                        style="@style/style_circle_number_button"
                        android:text="@string/ok"
                        android:id="@+id/main_code_ok_tv"
                        android:background="@drawable/bg_circle_green"
                        android:onClick="@{click}"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>